# storage/api-docs/api-docs.json
@@ -24,38 +24,38 @@
                 "summary": "管理員列表",
                 "description": "管理員列表",
                 "operationId": "4058e832b0d3a37c7c4d438aba28696e",
-                "parameters": [
-                    {
-                        "name": "draw",
-                        "in": "query",
-                        "description": "搜尋次數",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "example": "1"
-                        }
-                    },
-                    {
-                        "name": "start",
-                        "in": "query",
-                        "description": "開始筆數",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "example": "0"
-                        }
-                    },
-                    {
-                        "name": "length",
-                        "in": "query",
-                        "description": "每頁筆數",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "example": "10"
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "draw",
+                                    "start",
+                                    "length"
+                                ],
+                                "properties": {
+                                    "draw": {
+                                        "description": "搜尋次數",
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
+                                    "start": {
+                                        "description": "開始筆數",
+                                        "type": "integer",
+                                        "example": "0"
+                                    },
+                                    "length": {
+                                        "description": "每頁筆數",
+                                        "type": "integer",
+                                        "example": "10"
+                                    }
+                                },
+                                "type": "object"
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
                         "description": "成功",
